[package]
name = "bitcoin"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
futures = "0.3"
smol = "1.2"
async-dup = "1.2"
ring = "0.16"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
stderrlog = "0.5"
slab = "0.4"
serde_json = "1.0"
tiny_http = "0.9"
url = "2.1"
crossbeam = "0.8"
rand = "0.8"
hex-literal = "0.3"
clap = { version = "2.33", features = ["wrap_help"]}

[features]
default = []
test-utilities = []

[dev-dependencies]
ntest = "0.7"